# yDegen

./: .env.example  .gitignore  Dockerfile  README.md  ape-config.yaml  bot.py  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml
bot/: __init__.py  __main__.py  addresses.py  bot.py  config.py  main.py  tg.py  utils.py
bot/abis/: IAaveDataProvider.json  IAprOracle.json  IBaseStrategy.json  IDebtInFrontHelper.json  IERC20.json  ILenderBorrower.json  ILenderVault.json  ILooper.json  IMorpho.json  IMorphoIRM.json  IPawnBroker.json  IRegistry.json  IRelayer.json  ITokenizedStrategy.json  ITroveManager.json  IVault.json
src/: addresses.py  bot.py  strategies.py  tg.py
src/data/: strategies.json
